[package]
name = "crypto"
version = "6.7.2-beta.1"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.32", features = ["full"] }
hex = "0.4"
tower = "0.4"
libsm = "0.5"
efficient-sm2 = "0.2"
rayon = "1.8"
serde = "1.0"
serde_derive = "1.0"
tracing = "0.1"

cloud-util = "0.8.0-beta.1"
cita_cloud_proto = "=6.7.2-beta.1"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
