[package]
name = "crypto"
version = "6.7.3"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["full"] }
hex = "0.4"
tower = "0.4"
libsm = "0.6"
efficient-sm2 = "0.2"
rayon = "1.8"
serde = "1.0"
serde_derive = "1.0"
tracing = "0.1"

cloud-util = "=0.8.1-beta1"
cita_cloud_proto = "=6.7.3-beta1"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
