[package]
name = "crypto"
version = "6.7.4"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.38", features = ["full"] }
hex = "0.4"
tower = "0.4"
libsm = "0.6"
efficient-sm2 = "0.2"
rayon = "1.10"
serde = "1.0"
serde_derive = "1.0"
tracing = "0.1"

cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
